[package]
name = "server"
version = "0.1.0"
authors = ["steadylearner <32325099+steadylearner@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0.2"
actix-rt = "1.1.1"
mongodb = "1.1.1"
# bson is included at(reexported by) mongdb? 
# bson = "1.1.0"
serde = "1.0.116"
futures = "0.3.5"
born = "0.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
