[package]
name = "server"
version = "0.1.0"
authors = ["steadylearner <32325099+steadylearner@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
mongodb = "1.1.1""
serde = "1.0.115"
futures = "0.3.4"
born = "0.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
